# DeathStarBench

./: .gitmodules
socialNetwork/: Dockerfile.translate  Dockerfile.translate-py  docker-compose-daemon.yml  docker-compose-translate-mps.yml  docker-compose-translate.yml  social_network.thrift  test_script.py
socialNetwork/config/: jaeger-config.json  service-config.json
socialNetwork/docker/thrift-microservice-deps/python/: Dockerfile-translate-dep-py
socialNetwork/gen-cpp/: TranslateService.cpp  TranslateService.h  TranslateService_server.skeleton.cpp
socialNetwork/gen-py/social_network/: ComposePostService-remote  ComposePostService.py  HomeTimelineService-remote  HomeTimelineService.py  MediaService-remote  MediaService.py  PostStorageService-remote  PostStorageService.py  SocialGraphService-remote  SocialGraphService.py  TextService.py  TranslateService-remote  TranslateService.py  UniqueIdService-remote  UrlShortenService-remote  UrlShortenService.py  UserMentionService-remote  UserMentionService.py  UserService-remote  UserService.py  UserTimelineService-remote  UserTimelineService.py  __init__.py  ttypes.py
socialNetwork/src/: CMakeLists.txt
socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
socialNetwork/src/TranslateService/: CMakeLists.txt  TranslateHandler.h  TranslateService.cpp  TranslateService.py
socialNetwork/test/: TestTranslateService.py
socialNetwork/wrk2/scripts/social-network/: compose-post-translate.lua
